parser/Parser.output
   0  $accept : %entry% $end

   1  program : stmt_list T_eof

   2  stmt_list :
   3            | stmt stmt_list

   4  stmt : T_print expr
   5       | T_let T_var T_eq expr
   6       | T_for expr T_do stmt
   7       | T_begin stmt_list T_end
   8       | T_if expr T_then stmt

   9  expr : T_const
  10       | T_var
  11       | T_lparen expr T_rparen
  12       | expr T_plus expr
  13       | expr T_minus expr
  14       | expr T_times expr

  15  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (15)
	stmt_list : .  (2)

	T_print  shift 3
	T_let  shift 4
	T_for  shift 5
	T_begin  shift 6
	T_if  shift 7
	T_eof  reduce 2

	program  goto 8
	stmt_list  goto 9
	stmt  goto 10


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	stmt : T_print . expr  (4)

	T_const  shift 11
	T_var  shift 12
	T_lparen  shift 13
	.  error

	expr  goto 14


state 4
	stmt : T_let . T_var T_eq expr  (5)

	T_var  shift 15
	.  error


state 5
	stmt : T_for . expr T_do stmt  (6)

	T_const  shift 11
	T_var  shift 12
	T_lparen  shift 13
	.  error

	expr  goto 16


state 6
	stmt : T_begin . stmt_list T_end  (7)
	stmt_list : .  (2)

	T_print  shift 3
	T_let  shift 4
	T_for  shift 5
	T_begin  shift 6
	T_if  shift 7
	T_end  reduce 2

	stmt_list  goto 17
	stmt  goto 10


state 7
	stmt : T_if . expr T_then stmt  (8)

	T_const  shift 11
	T_var  shift 12
	T_lparen  shift 13
	.  error

	expr  goto 18


state 8
	%entry% : '\001' program .  (15)

	.  reduce 15


state 9
	program : stmt_list . T_eof  (1)

	T_eof  shift 19
	.  error


state 10
	stmt_list : stmt . stmt_list  (3)
	stmt_list : .  (2)

	T_print  shift 3
	T_let  shift 4
	T_for  shift 5
	T_begin  shift 6
	T_if  shift 7
	T_end  reduce 2
	T_eof  reduce 2

	stmt_list  goto 20
	stmt  goto 10


state 11
	expr : T_const .  (9)

	.  reduce 9


state 12
	expr : T_var .  (10)

	.  reduce 10


state 13
	expr : T_lparen . expr T_rparen  (11)

	T_const  shift 11
	T_var  shift 12
	T_lparen  shift 13
	.  error

	expr  goto 21


state 14
	stmt : T_print expr .  (4)
	expr : expr . T_plus expr  (12)
	expr : expr . T_minus expr  (13)
	expr : expr . T_times expr  (14)

	T_plus  shift 22
	T_minus  shift 23
	T_times  shift 24
	T_print  reduce 4
	T_let  reduce 4
	T_for  reduce 4
	T_begin  reduce 4
	T_end  reduce 4
	T_if  reduce 4
	T_eof  reduce 4


state 15
	stmt : T_let T_var . T_eq expr  (5)

	T_eq  shift 25
	.  error


state 16
	stmt : T_for expr . T_do stmt  (6)
	expr : expr . T_plus expr  (12)
	expr : expr . T_minus expr  (13)
	expr : expr . T_times expr  (14)

	T_do  shift 26
	T_plus  shift 22
	T_minus  shift 23
	T_times  shift 24
	.  error


state 17
	stmt : T_begin stmt_list . T_end  (7)

	T_end  shift 27
	.  error


state 18
	stmt : T_if expr . T_then stmt  (8)
	expr : expr . T_plus expr  (12)
	expr : expr . T_minus expr  (13)
	expr : expr . T_times expr  (14)

	T_then  shift 28
	T_plus  shift 22
	T_minus  shift 23
	T_times  shift 24
	.  error


state 19
	program : stmt_list T_eof .  (1)

	.  reduce 1


state 20
	stmt_list : stmt stmt_list .  (3)

	.  reduce 3


state 21
	expr : T_lparen expr . T_rparen  (11)
	expr : expr . T_plus expr  (12)
	expr : expr . T_minus expr  (13)
	expr : expr . T_times expr  (14)

	T_rparen  shift 29
	T_plus  shift 22
	T_minus  shift 23
	T_times  shift 24
	.  error


state 22
	expr : expr T_plus . expr  (12)

	T_const  shift 11
	T_var  shift 12
	T_lparen  shift 13
	.  error

	expr  goto 30


state 23
	expr : expr T_minus . expr  (13)

	T_const  shift 11
	T_var  shift 12
	T_lparen  shift 13
	.  error

	expr  goto 31


state 24
	expr : expr T_times . expr  (14)

	T_const  shift 11
	T_var  shift 12
	T_lparen  shift 13
	.  error

	expr  goto 32


state 25
	stmt : T_let T_var T_eq . expr  (5)

	T_const  shift 11
	T_var  shift 12
	T_lparen  shift 13
	.  error

	expr  goto 33


state 26
	stmt : T_for expr T_do . stmt  (6)

	T_print  shift 3
	T_let  shift 4
	T_for  shift 5
	T_begin  shift 6
	T_if  shift 7
	.  error

	stmt  goto 34


state 27
	stmt : T_begin stmt_list T_end .  (7)

	.  reduce 7


state 28
	stmt : T_if expr T_then . stmt  (8)

	T_print  shift 3
	T_let  shift 4
	T_for  shift 5
	T_begin  shift 6
	T_if  shift 7
	.  error

	stmt  goto 35


state 29
	expr : T_lparen expr T_rparen .  (11)

	.  reduce 11


state 30
	expr : expr . T_plus expr  (12)
	expr : expr T_plus expr .  (12)
	expr : expr . T_minus expr  (13)
	expr : expr . T_times expr  (14)

	T_times  shift 24
	T_print  reduce 12
	T_let  reduce 12
	T_for  reduce 12
	T_do  reduce 12
	T_begin  reduce 12
	T_end  reduce 12
	T_if  reduce 12
	T_then  reduce 12
	T_rparen  reduce 12
	T_plus  reduce 12
	T_minus  reduce 12
	T_eof  reduce 12


state 31
	expr : expr . T_plus expr  (12)
	expr : expr . T_minus expr  (13)
	expr : expr T_minus expr .  (13)
	expr : expr . T_times expr  (14)

	T_times  shift 24
	T_print  reduce 13
	T_let  reduce 13
	T_for  reduce 13
	T_do  reduce 13
	T_begin  reduce 13
	T_end  reduce 13
	T_if  reduce 13
	T_then  reduce 13
	T_rparen  reduce 13
	T_plus  reduce 13
	T_minus  reduce 13
	T_eof  reduce 13


state 32
	expr : expr . T_plus expr  (12)
	expr : expr . T_minus expr  (13)
	expr : expr . T_times expr  (14)
	expr : expr T_times expr .  (14)

	.  reduce 14


state 33
	stmt : T_let T_var T_eq expr .  (5)
	expr : expr . T_plus expr  (12)
	expr : expr . T_minus expr  (13)
	expr : expr . T_times expr  (14)

	T_plus  shift 22
	T_minus  shift 23
	T_times  shift 24
	T_print  reduce 5
	T_let  reduce 5
	T_for  reduce 5
	T_begin  reduce 5
	T_end  reduce 5
	T_if  reduce 5
	T_eof  reduce 5


state 34
	stmt : T_for expr T_do stmt .  (6)

	.  reduce 6


state 35
	stmt : T_if expr T_then stmt .  (8)

	.  reduce 8


20 terminals, 6 nonterminals
16 grammar rules, 36 states
